# llvm-libs2cabal

./: .gitignore  README.md  llvm-libs2cabal.cabal
src/: Main.hs
