name:                llvm-libs2cabal
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/llvm-libs2cabal#readme
license:             BSD3
license-file:        LICENSE
author:              MichaeGon
maintainer:          MichaeGon
copyright:           2016 MichaeGon
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable llvm-libs2cabal
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, process
